<resources>
    <string name="app_name">Juliet Calçados</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnAceito">Acessar a loja</string>
    <string name="btnSair">Não concordo</string>
    <string name="btnSearch">Ir</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnAddAoCarrinho">Add ao carrinho</string>
    <string name="btnVoltarCompras">Voltar as compras</string>
    <string name="btnCadastro">Não sou cadastrado ainda</string>
    <string name="btnEfetuarPagamento">Efetuar pagamento</string>
    <string name="btnFinalizarCompra">Finalizar Compra</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_cadastro">Cadastro</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="edtNomeCadastro">Nome</string>
    <string name="edtConfirmaSenhaCadastro">Confirmar Senha</string>
    <string name="edtSenhaCadastro">Senha</string>
    <string name="edtSearch">Pesquisar</string>
    <string name="edtUsuarioLogin">Usuário</string>
    <string name="edtSenhaLogin">Senha</string>
    <string name="edtNrCartao">Nº do Cartão</string>
    <string name="edtValidadeCartao">Validade</string>
    <string name="edtParcelas">Parcelas</string>
    <string name="edtCep">Cep</string>
    <string name="edtQtd">qtd</string>
    <string name="edtLogradouro">Logradouro</string>
    <string name="edtBairro">Bairro</string>
    <string name="edtCidade">Cidade</string>
    <string name="chkMsg">Aceito os termos e condições</string>
    <string name="rdbCartao">Cartão de Crédito</string>
    <string name="rdbBoleto">Boleto</string>
    <string name="abrirMenu">Abrir menu</string>
    <string name="fecharMenu">Fechar menu</string>
    <string name="txtMsgCheckout">Checkout</string>
    <string name="txtMsgErro">Ops, ocorreu um erro :(</string>
    <string name="txtMsgErro2">Tente novamente mais tarde</string>
    <string name="txtMsgChekout2">Total: R$</string>
    <string name="txtMsgSobre">Sobre Juliet Calçados</string>
    <string name="txtMsgCategorias">Categorias de Calçados</string>
    <string name="txtMsgCategoriaChinelo">Chinelos</string>
    <string name="txtMsgEndereco">Dados de Endereço</string>
    <string name="txtMsgHome">Juliet Calçados</string>
    <string name="txtMsgLogin">Entre com seus dados</string>
    <string name="txtMsgTermos">Termos e Condições</string>
    <string name="txtMsgCarrinho">Carrinho de Compras</string>
    <string name="txtMsgCadastro">Crie sua conta</string>
    <string name="txtMsgCategoriaEsportivos">Esportivos</string>
    <string name="txtMsgCategoriaCasuais">Casuais</string>
    <string name="txtMsgCategoriaInfantil">Linha Infantil</string>
    <string name="txtMsgCategoriaSalto">Salto Alto</string>
    <string name="txtMsgCompraFinalizada">Compra finalizada :)</string>
    <string name="txtMsgBemVindo">Bem vindo :)</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="hello_world">Hello world!</string>
</resources>
