<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wesbalbinolive.julietapp.CheckoutActivity"
    android:background="#ddd">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/checkout"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtMsgCheckout"
                    android:id="@+id/txtMsgChekout"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:paddingLeft="20sp"
                    android:paddingTop="20sp"
                    android:paddingRight="20sp"
                    android:paddingBottom="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtMsgChekout2"
                    android:id="@+id/txtMsgCheckout2"
                    android:textColor="#000"
                    android:textSize="13sp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="800,00"
                    android:id="@+id/txtMsgPrecoCheckout"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="271dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdbCartao"
                        android:checked="true"
                        android:text="@string/rdbCartao"
                        android:paddingRight="50dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdbBoleto"
                        android:id="@+id/rdbBoleto"
                        android:checked="false" />

                </RadioGroup>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/edtNrCartao"
                        android:layout_gravity="center_horizontal"
                        android:textColorHint="#9c9c9c"
                        android:hint="@string/edtNrCartao"
                        android:paddingLeft="15dp"
                        android:paddingBottom="15dp"
                        android:maxLength="20"
                        android:maxLines="1" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edtValidadeCartao"
                        android:layout_gravity="center_horizontal"
                        android:textColorHint="#9c9c9c"
                        android:hint="@string/edtValidadeCartao"
                        android:paddingLeft="15dp"
                        android:paddingBottom="15dp"
                        android:inputType="date"
                        android:maxLength="10"
                        android:maxLines="1" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edtQtdParcelas"
                        android:layout_gravity="center_horizontal"
                        android:textColorHint="#9c9c9c"
                        android:hint="@string/edtParcelas"
                        android:paddingLeft="15dp"
                        android:paddingBottom="15dp"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1" />

                    <Button
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnEfetuarPagamento"
                        android:id="@+id/btnEfetuarPagmento"
                        android:layout_gravity="center_horizontal"
                        android:drawableRight="@drawable/ic_carrinho"
                        android:background="#455A64"
                        android:textColor="#fff"
                        android:paddingRight="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
