<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ddd"
    android:weightSum="1"
    tools:context="com.wesbalbinolive.julietapp.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:background="@drawable/login_bg"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Login"
                android:id="@+id/textView11"
                android:textColor="#fff"
                android:textSize="30sp"
                android:layout_weight="0.36"
                android:padding="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMsgLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:text="@string/txtMsgLogin"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/edtUsuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:hint="@string/edtUsuarioLogin"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:textColor="#000"
                android:textColorHint="#9c9c9c" />


            <EditText
                android:id="@+id/edtSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:hint="@string/edtSenhaLogin"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:textColor="#000"
                android:textColorHint="#9c9c9c" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="187dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="#37474F"
                android:drawableRight="@drawable/login"
                android:text="@string/btnEntrar"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/btnCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.11"
                android:gravity="bottom"
                android:text="@string/btnCadastro"
                android:textColor="#2196f3" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
