<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wesbalbinolive.julietapp.ErroActivity"
    android:background="#ddd">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtMsgErro"
            android:id="@+id/textView14"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtMsgErro2"
            android:id="@+id/txtMsgErro2"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#000" />

        <ImageView
            android:layout_width="538dp"
            android:layout_height="233dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/error"
            android:layout_marginTop="10dp"
            android:contentDescription="404" />

        <Button
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:text="@string/btnVoltarCompras"
            android:id="@+id/btnVoltarCompras"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>
