<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    tools:context="com.wesbalbinolive.julietapp.CadastroActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:background="@drawable/cadastro_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Cadastro"
                android:id="@+id/textView18"
                android:textColor="#fff"
                android:textSize="30sp"
                android:layout_weight="0.36"
                android:padding="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMsgCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:text="@string/txtMsgCadastro"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtNomeCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:hint="@string/edtNomeCadastro"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:textColor="#000"
                android:textColorHint="#9c9c9c" />

            <EditText
                android:id="@+id/edtSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:hint="@string/edtSenhaCadastro"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:textColor="#000"
                android:textColorHint="#9c9c9c" />

            <EditText
                android:id="@+id/edtConfirmaSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:hint="@string/edtConfirmaSenhaCadastro"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:textColor="#000"
                android:textColorHint="#9c9c9c"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="187dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:drawableRight="@drawable/ic_cadastro"
                android:background="#37474F"
                android:text="@string/btnCadastrar"
                android:textColor="#fff" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
